--- a/WEB1/css/Style.css
+++ b/WEB1/css/Style.css
@@ -1,292 +1,262 @@
 /* Fonts-family */
 @font-face {
-    font-family: 'Proxima Nova Rg';
-    src: url('../fonts/ProximaNova-Bold.woff2') format('woff2'),
-        url('../fonts/ProximaNova-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Proxima Nova Rg';
+  src: url('../fonts/ProximaNova-Bold.woff2') format('woff2'), url('../fonts/ProximaNova-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
-
 @font-face {
-    font-family: 'Proxima Nova Rg';
-    src: url('../fonts/ProximaNova-Regular.woff2') format('woff2'),
-        url('../fonts/ProximaNova-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Proxima Nova Rg';
+  src: url('../fonts/ProximaNova-Regular.woff2') format('woff2'), url('../fonts/ProximaNova-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
-.reg(){
-font-family: 'ProximaNova-Regular', sans-serif;
-}
-.bold(){
-font-family: 'ProximaNova-Bold', sans-serif;
-}
-
 /* Colors */
-@btn-color: #f9b002;
-@icon-color: #46b914;
-@text-color: #1a1820;
-@danger: #ff0000;
-@bg-light: #f5f5f5;
 /* Basic setting */
-html{
-	font-size: 10px;
+html {
+  font-size: 10px;
 }
-body{
-	.reg();
+body {
+  font-family: 'ProximaNova-Regular', sans-serif;
 }
-button, input, a{
-	&:focus{
-		outline: none;
-	}
+button:focus,
+input:focus,
+a:focus {
+  outline: none;
 }
-.button{
-	font-size: 1.1rem;
-	background-color: @btn-color;
-	color: white;
-	padding: 1rem 3rem;
-	border-radius: 8px;
-	text-transform: uppercase;
-	border:none ;
-	transition: all 0.2s;
-	&:hover {
-		background-color: darken(@btn-color, 10%);
-	}
-	
+.button {
+  font-size: 1.1rem;
+  background-color: #f9b002;
+  color: white;
+  padding: 1rem 3rem;
+  border-radius: 8px;
+  text-transform: uppercase;
+  border: none ;
+  transition: all 0.2s;
 }
-
+.button:hover {
+  background-color: #c68c02;
+}
 /* Typography */
-section{
-	padding: 10rem 0;
+section {
+  padding: 10rem 0;
 }
 /* main */
-.main{
-	padding: 3rem 5rem;
-	background: #fff url(../img/main-back.jpg) center center no-repeat;
-	background-size: cover;
-	&-content{
-		margin-top: 12rem;
-
-		h1{
-			.bold();
-			font-size: 2.5rem;
-			line-height: 1.5;
-			text-transform: uppercase;
-		}
-	}
-	&-subtitle{
-		margin-top: 2rem;
-		font-size: 2rem;
-	}
-	span{
-		display: inline-block;
-		padding:2rem 3rem;
-		margin-top: 4rem;
-		font-size: 1.2rem;
-		color: white;
-		background-color:@icon-color;
-		text-align: center;	
-
-		strong{
-			font-size: 1.6rem;
-			.bold();
-		}
-	}
-	&-triger{
-		margin-top: 2rem;
-		display: block;
-		font-size: 1.3rem;
-		text-transform: uppercase;
-
-	}
-
- &-form{
- 	background-color: white;
- 	padding: 2.5rem 3.5rem;
- 	text-align: center;
- &-header{
- 	font-size: 1.6rem;
- 	strong{
- 		font-size: 1.7rem;
- 	}
- }
- 	&-input{
- 		display: block;
- 		border: 1px solid grey;
- 		width: 100%;
- 		padding:1.5rem;
- 	}
- 	label{
- 		display: inline-block;
- 		background-color: white;
- 		font-size: 1.2rem;
- 		padding: 0.5rem;
- 		transform: translateY(70%);
- 	}
- 	&-btn{
- 		margin-top:1rem;
- 		width: 100%;
- 		height: 4rem;
- 		font-size: 1.2rem;
- 	}
- 	small{
- 		display: block;
- 		font-size: 0.9rem;
- 		margin-top: 1rem;
- 	}
- }
+.main {
+  padding: 3rem 5rem;
+  background: #ffffff url(../img/main-back.jpg) center center no-repeat;
+  background-size: cover;
 }
-.header{
-	height: 7rem;
+.main-content {
+  margin-top: 12rem;
 }
-.wrap{
-	display: table;
-	width: 100%;
-	height: 7rem;
-	&-block{
-		text-align: right;
-		display: table-cell;
-		vertical-align: middle;
-	}
+.main-content h1 {
+  font-family: 'ProximaNova-Bold', sans-serif;
+  font-size: 2.5rem;
+  line-height: 1.5;
+  text-transform: uppercase;
 }
-.phone-link{
-	display: inline-block;
-	color: @text-color;
-	font-weight: 900;
-	font-size: 1.5rem;
-	height: 7rem;
-	line-height: 7rem;
+.main-subtitle {
+  margin-top: 2rem;
+  font-size: 2rem;
 }
-
-.section-header{
-	text-align: center;
-	.bold();
-	font-size: 3rem;
-	margin-bottom:10rem;
+.main span {
+  display: inline-block;
+  padding: 2rem 3rem;
+  margin-top: 4rem;
+  font-size: 1.2rem;
+  color: white;
+  background-color: #46b914;
+  text-align: center;
 }
-.slick-active{
-	outline: none;
+.main span strong {
+  font-size: 1.6rem;
+  font-family: 'ProximaNova-Bold', sans-serif;
 }
-.features{
-	&-block{
-		text-align: center;
-		p{
-			font-size: 1.5rem;
-
-		}
-		h3{
-			.bold();
-			font-size: 2rem;
-			margin-bottom: 3rem;
-		}
-	}
-	&-img{ 
-		height: 8rem;
-		margin-bottom: 3rem;
-	img{
-		display: block;
-		margin: 0 auto
-
-	}
+.main-triger {
+  margin-top: 2rem;
+  display: block;
+  font-size: 1.3rem;
+  text-transform: uppercase;
 }
+.main-form {
+  background-color: white;
+  padding: 2.5rem 3.5rem;
+  text-align: center;
 }
-.prev{
-	 position: absolute;
-	 z-index: (99);
-    top: 50%;
-    left: 0;
-    border:none;
-    width: 2rem;
-    height: 2rem;
-    background: url(../img/features/Left-arrov.png) center no-repeat;
-    background-size:70%;
+.main-form-header {
+  font-size: 1.6rem;
 }
-.next{
-	 position: absolute;
-	 z-index: (99);
-    top: 50%;
-    right: 0;
-    border:none;
-    width: 2rem;
-    height: 2rem;
-    background: url(../img/features/Right-arrow.png) center no-repeat;
-    background-size:70%;
+.main-form-header strong {
+  font-size: 1.7rem;
 }
-
+.main-form-input {
+  display: block;
+  border: 1px solid grey;
+  width: 100%;
+  padding: 1.5rem;
+}
+.main-form label {
+  display: inline-block;
+  background-color: white;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  transform: translateY(70%);
+}
+.main-form-btn {
+  margin-top: 1rem;
+  width: 100%;
+  height: 4rem;
+  font-size: 1.2rem;
+}
+.main-form small {
+  display: block;
+  font-size: 0.9rem;
+  margin-top: 1rem;
+}
+.header {
+  height: 7rem;
+}
+.wrap {
+  display: table;
+  width: 100%;
+  height: 7rem;
+}
+.wrap-block {
+  text-align: right;
+  display: table-cell;
+  vertical-align: middle;
+}
+.phone-link {
+  display: inline-block;
+  color: #1a1820;
+  font-weight: 900;
+  font-size: 1.5rem;
+  height: 7rem;
+  line-height: 7rem;
+}
+.section-header {
+  text-align: center;
+  font-family: 'ProximaNova-Bold', sans-serif;
+  font-size: 3rem;
+  margin-bottom: 10rem;
+}
+.slick-active {
+  outline: none;
+}
+.features-block {
+  text-align: center;
+}
+.features-block p {
+  font-size: 1.5rem;
+}
+.features-block h3 {
+  font-family: 'ProximaNova-Bold', sans-serif;
+  font-size: 2rem;
+  margin-bottom: 3rem;
+}
+.features-img {
+  height: 8rem;
+  margin-bottom: 3rem;
+}
+.features-img img {
+  display: block;
+  margin: 0 auto;
+}
+.prev {
+  position: absolute;
+  z-index: 99;
+  top: 50%;
+  left: 0;
+  border: none;
+  width: 2rem;
+  height: 2rem;
+  background: url(../img/features/Left-arrov.png) center no-repeat;
+  background-size: 70%;
+}
+.next {
+  position: absolute;
+  z-index: 99;
+  top: 50%;
+  right: 0;
+  border: none;
+  width: 2rem;
+  height: 2rem;
+  background: url(../img/features/Right-arrow.png) center no-repeat;
+  background-size: 70%;
+}
 /* Оформления всплывющего окна	*/
-.popup{
-	display: none;
-	position: fixed;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 9;
-	background: rgba(0, 0, 0, 0.5);
-	&-content{
-		position: fixed;
-		left: 50%;
-		top:10%;
-		transform: translateX(-50%);
-		background-color: white;
-		text-align: center;
-		padding:2rem 3rem;
-		
-	}
-	&-close{
-		position:fixed;
-		right: -2.1rem;
-		top: -1.2rem;
-		border:none;
-		font-size: 3rem;
-		background:none;
-	}
-	h4{
-		.bold();
-		font-weight: 600;
-	}
-	p{
-		font-size: 1.3rem;
-		margin-bottom: -3rem;
-	}
+.popup {
+  display: none;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+  background: rgba(0, 0, 0, 0.5);
 }
-@media(max-width: 991px){
-	.main{
-		background-position: top right;
-	}
-	.phone-block{
-		text-align: center;
-	}
-	.main-content{
-		margin-top:2rem;
-	}
-	.main-tittle{
-		text-align: center;
-		padding-bottom: 3rem;
-	}
+.popup-content {
+  position: fixed;
+  left: 50%;
+  top: 10%;
+  transform: translateX(-50%);
+  background-color: white;
+  text-align: center;
+  padding: 2rem 3rem;
 }
-@media(max-width: 575px){
-	.main{
-	
-		text-align: center;
-	}
-	.header{
-		text-align: center;
-	}
-	.wrap-block{
-		text-align: center;
-	}
-	.main-content{
-		margin-top:13rem;
-	}
-	.main-title{
-		font-size: 2rem;
-
-	}
-	.button{
-		height: 5rem;
-	}
+.popup-close {
+  position: fixed;
+  right: -2.1rem;
+  top: -1.2rem;
+  border: none;
+  font-size: 3rem;
+  background: none;
+}
+.popup h4 {
+  font-family: 'ProximaNova-Bold', sans-serif;
+  font-weight: 600;
+}
+.popup p {
+  font-size: 1.3rem;
+  margin-bottom: -3rem;
+}
+@media (max-width: 991px) {
+  .main {
+    background-position: top right;
+  }
+  .phone-block {
+    text-align: center;
+  }
+  .main-content {
+    margin-top: 2rem;
+  }
+  .main-tittle {
+    text-align: center;
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 575px) {
+  .main {
+    text-align: center;
+  }
+  .header {
+    text-align: center;
+  }
+  .wrap-block {
+    text-align: center;
+  }
+  .main-content {
+    margin-top: 13rem;
+  }
+  .main-title {
+    font-size: 2rem;
+  }
+  .button {
+    height: 5rem;
+  }
 }
