--- a/WEB1/css/Style.css
+++ b/WEB1/css/Style.css
@@ -287,6 +287,87 @@ section {
 .prices button {
   margin-bottom: 2rem;
 }
+.feedback {
+  position: relative;
+  background-color: white;
+}
+.feedback-prev-btn {
+  left: -4rem;
+}
+.feedback-next-btn {
+  right: -4rem;
+  background: none;
+}
+.feedback-slider {
+  background-color: white;
+  box-shadow: 6px 10px 18px 0px rgba(0, 0, 0, 0.5);
+  padding: 5rem 6rem;
+}
+.feedback-slider-btn {
+  position: absolute;
+  top: 50%;
+  width: 4rem;
+  height: 3rem;
+  border: none;
+}
+.feedback-slider p {
+  font-size: 1.3rem;
+}
+.feedback-slider h4 {
+  font-weight: 600;
+  font-size: 1.3rem;
+}
+.feedback-slider span {
+  font-size: 1.2rem;
+}
+.feedback-text {
+  position: relative;
+  border: 2px solid #46b914;
+  padding: 1rem 1rem;
+  margin-top: 2rem;
+  font-style: italic;
+}
+.feedback-text::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: -2rem;
+  left: 6rem;
+  width: 2rem;
+  height: 2.05rem;
+  background-color: white;
+  border: 2px solid #46b914;
+  border-bottom: none;
+  border-top-right-radius: 100px;
+}
+.feedback-klient {
+  border-radius: 100px;
+}
+.feedback-klient-name {
+  font-size: 3rem;
+  padding-top: 2rem;
+}
+.feedback-form {
+  margin-top: 5rem;
+}
+.feedback-form h3 {
+  font-family: 'ProximaNova-Bold', sans-serif;
+  font-weight: 500;
+  font-size: 2.3rem;
+}
+.feedback-btn {
+  margin-top: 3rem;
+  padding: 2rem 6rem;
+}
+.heand {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  max-width: 30rem;
+}
+.media {
+  margin-top: 2rem;
+}
 @media (max-width: 991px) {
   .main {
     background-position: top right;
@@ -300,6 +381,14 @@ section {
   .main-tittle {
     text-align: center;
     padding-bottom: 3rem;
+  }
+  .feedback-main-p {
+    margin-top: 3rem;
+  }
+}
+@media (max-width: 764px) {
+  .heand {
+    display: none;
   }
 }
 @media (max-width: 575px) {
@@ -323,5 +412,13 @@ section {
   }
   .popup-content {
     width: 300px;
+  }
+  .feedback-prev-btn {
+    left: 0rem;
+    background: none;
+  }
+  .feedback-next-btn {
+    right: 0rem;
+    background: none;
   }
 }
