--- a/WEB1/less/Style.less
+++ b/WEB1/less/Style.less
@@ -322,6 +322,92 @@ section{
 		margin-bottom:2rem;
 	}
 }
+
+
+.feedback{
+	position: relative;
+	background-color: white;
+	&-prev-btn{
+		left: -4rem;
+	}
+	&-next-btn{
+		right: -4rem;
+		background:none;
+	}
+	&-slider{
+		background-color: white;
+		box-shadow: 6px 10px 18px 0px rgba(0, 0, 0, 0.5);
+		padding: 5rem 6rem;
+		  &-btn{
+    	position:absolute;
+    	top:50%;
+    	width: 4rem;
+    	height: 3rem;
+    	border:none;
+    }
+
+		p{
+			font-size: 1.3rem;
+		}
+		h4{
+			font-weight: 600;
+			font-size: 1.3rem;
+		}
+		span{
+			font-size: 1.2rem;
+		}
+	}
+	&-text{
+		position: relative;
+		border: 2px solid @icon-color;
+		padding:1rem 1rem;
+		margin-top: 2rem;
+			font-style:italic;
+			&::before{
+				content: '';
+				display: block;
+				position:absolute;
+				top:-2rem;
+				left: 6rem;
+				width: 2rem;
+				height: 2.05rem;
+				background-color:white;
+				border:2px solid @icon-color ;
+				border-bottom:none;
+				border-top-right-radius:100px;
+			}
+
+	}
+	&-klient{
+		border-radius:100px;
+		&-name{
+				font-size: 3rem;
+			padding-top:2rem;
+		}
+	}
+    &-form{
+    	margin-top: 5rem;
+    	h3{
+    		.bold();
+    		font-weight: 500;
+    		font-size: 2.3rem;
+    	}
+    }
+    &-btn{
+    	margin-top: 3rem;
+    	padding: 2rem 6rem;
+    }
+}
+.heand{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	max-width: 30rem;
+}
+.media{
+	margin-top: 2rem;
+}
+
 @media(max-width: 991px){
 	.main{
 		background-position: top right;
@@ -336,6 +422,17 @@ section{
 		text-align: center;
 		padding-bottom: 3rem;
 	}
+	.feedback{
+		&-main-p{
+			margin-top: 3rem;
+		}
+}
+}
+@media (max-width: 764px) {
+	.heand{
+		display: none;
+	}
+	
 }
 @media(max-width: 575px){
 	.main{
@@ -360,5 +457,15 @@ section{
 	}
 	.popup-content{
 		width: 300px;
+	}
+	.feedback{
+		&-prev-btn{
+		left: 0rem;
+		background:none;
+	}
+	&-next-btn{
+		right: 0rem;
+		background:none;
+	}
 	}
 }
