--- a/WEB1/less/Style.less
+++ b/WEB1/less/Style.less
@@ -449,19 +449,127 @@ section{
 			position: absolute;
 			z-index: -1;
 	 bottom: 0;
-	right: 0;
+	right: -20rem;
 	max-width: 60rem;
 		}
 }
-@media(max-width: 1200px){
-.sheme{
-	&-heand{
-			max-width: 40rem;
+.all-inclusive{
+	background: url(img/all-inclusive/back.png) center no-repeat;
+	&-header{
+		h2{
+			color: @icon-color;
+			font-size: 3.6rem;
 
+		}
+		p{
+			margin-top: 4rem;
+			font-size: 1.5rem;
+			margin-bottom: -5rem;
+		}
+	}
+	&-media{
+		padding-left:1rem;
+		padding-top:1rem;
+		margin-top:5rem;
+		h4{
+			font-size: 1.5rem;
+			font-weight: 600;
+			.bold();
+		}
+		font-size: 1.2rem;
+	}
+}
+.circle{
+		display: inline-block;
+	background-color: @icon-color;
+	width: 100%;
+	height: 100%;
+	border-radius:50%;
+	&-border{
+		display: inline-block;
+		width: 5rem;
+		height: 5rem;
+		border: 2px solid @icon-color;
+		border-radius: 50%;
+		text-align: center;
+		line-height: 4rem;
+		padding: 0.2rem;
+		color: white;
+		.bold();
+		font-size: 1.9rem;
+		margin-top:5rem;
 	}
 }
 
+.problems{
+	position: relative;
+	&-women{
+		position:absolute;
+		width: 28rem;
+		bottom:0;
+		left: 50%;
+		transform: translateX(-60%);
+	}
+	&-list{
+		padding: 3rem 3rem;
+		min-height: 31rem;
+		h4{
+			font-size: 1.7rem;
+			padding-bottom:2rem;
+		}
+		ul{
+			list-style-type:none;
+			padding-left: 0rem;
+		}
+		li{
+
+			font-size: 1.2rem;
+			padding-bottom:2rem;
+			position:relative;
+				padding-left: 2.5rem;
+				&:before{
+				content: '';
+				position:absolute;
+				left: 0;
+				top: 50%;
+				transform: translateY(-100%);
+				width: 1rem;
+				height: 1rem;
+				background-color: black ;
+                 background-size: 100%;
+				vertical-align: middle;
+				padding:1rem 1rem;
+
+		}
+	}
+		&-bad{
+			h4{
+				opacity: 0.5;
+			}
+			li{
+				
+				&:before{
+					background: url(../img/problems/cancel.png) center no-repeat;
+					background-size: 80%;
+				}
+			}
+			
+			border:3px solid #e8e8e8;
+
+		}
+		&-good{
+			border: 3px solid @icon-color;
+			li{
+				
+				&:before{
+					background: url(../img/problems/checked.png) center no-repeat;
+					background-size: 80%;
+				}
+			}
+		}
+	}
 }
+
 @media(max-width: 991px){
 	.main{
 		background-position: top right;
@@ -485,6 +593,11 @@ section{
 	&-heand{
 			display: none;
 
+	}
+}
+.problems{
+    &-women{
+	display: none;
 	}
 }
 }
@@ -543,4 +656,10 @@ section{
 			}
 		}
 	}
+	.all-inclusive{
+	&-media{
+			max-width: 20rem;
+				
+	}
+}
 }
