--- a/WEB1/css/Style.css
+++ b/WEB1/css/Style.css
@@ -512,6 +512,30 @@ section {
   background: url(../img/problems/checked.png) center no-repeat;
   background-size: 80%;
 }
+/*Материалы	*/
+.material a {
+  color: green;
+  font-size: 1.1rem;
+  border-bottom: 1px dotted green;
+}
+.material a:hover {
+  color: #006700;
+}
+.material-block {
+  text-align: center;
+}
+.material-block h3 {
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+}
+.material-block p {
+  font-size: 1.2rem;
+  padding-bottom: 1rem;
+}
+.material-footer p {
+  padding-top: 4rem;
+  font-size: 1.4rem;
+}
 @media (max-width: 991px) {
   .main {
     background-position: top right;
