--- a/WEB1/less/Style.less
+++ b/WEB1/less/Style.less
@@ -640,6 +640,25 @@ section{
 
 	
 }
+.contacs{
+	background: url(../img/contacs/contacs.jpg) right no-repeat ;
+	background-size: 99%;
+	h3{
+		font-size: 2.4rem;
+		padding-bottom:4rem
+	}
+	p{
+		font-size: 1.2rem;
+		padding-top:2rem;
+	}
+}
+ .map{
+ 	margin-top: 2rem;
+ }
+ .footer{
+
+ 	font-size: 1.2rem;
+ }
 @media(max-width: 991px){
 	.main{
 		background-position: top right;
@@ -686,6 +705,9 @@ section{
 		}
 		
 	}
+}
+.contacs{
+	text-align: center;
 }
 }
 @media (max-width: 764px) {
@@ -749,5 +771,8 @@ section{
 				
 	}
 }
+ .footer{
+ 	text-align: center;
 
+ }
 }
