--- a/WEB1/css/Style.css
+++ b/WEB1/css/Style.css
@@ -573,6 +573,24 @@ section {
   padding-bottom: 2rem;
   padding-top: 2rem;
 }
+.contacs {
+  background: url(../img/contacs/contacs.jpg) right no-repeat;
+  background-size: 99%;
+}
+.contacs h3 {
+  font-size: 2.4rem;
+  padding-bottom: 4rem;
+}
+.contacs p {
+  font-size: 1.2rem;
+  padding-top: 2rem;
+}
+.map {
+  margin-top: 2rem;
+}
+.footer {
+  font-size: 1.2rem;
+}
 @media (max-width: 991px) {
   .main {
     background-position: top right;
@@ -607,6 +625,9 @@ section {
   }
   .upsell-box img {
     padding-top: 2rem;
+  }
+  .contacs {
+    text-align: center;
   }
 }
 @media (max-width: 764px) {
@@ -655,5 +676,8 @@ section {
   }
   .all-inclusive-media {
     max-width: 20rem;
+  }
+  .footer {
+    text-align: center;
   }
 }
