--- a/theyalow/less/style.less
+++ b/theyalow/less/style.less
@@ -1,7 +1,42 @@
 
 body{
 	font-size: 16px;
-	font-family: Arial, sans-serif;
+	
+}
+.section-header{
+	text-align: center;
+	h2{
+		font-size: 20px;
+		margin-top: 100px;
+
+	}
+	p{
+		margin-top: 30px;
+		font-size: 16px;
+		margin-bottom: 80px;
+	}
+}
+.prev{
+	 position: absolute;
+	 z-index: (99);
+    top: 50%;
+    left: 0;
+    border:none;
+    width: 2rem;
+    height: 2rem;
+    background: url(../img/aboutus/ArrowLeft.png) center no-repeat;
+    background-size:70%;
+}
+.next{
+	 position: absolute;
+	 z-index: (99);
+    top: 50%;
+    right: 0;
+    border:none;
+    width: 2rem;
+    height: 2rem;
+    background: url(../img/aboutus/ArrowRight.png) center no-repeat;
+    background-size:70%;
 }
 /*Header */
 .header{
@@ -63,7 +98,45 @@ body{
 		transition: 3s;
 	}
 }
+/*Services*/
+.services{
+	text-align: center;
+	&-block{
+	
+	h3{
 
+		font-size: 14px;
+		margin-top: 30px;
+		margin-bottom: 25px;
+	}
+	p{
+		font-size: 14px;
+		padding-bottom:100px;
+	}
+	}
+}
+/*About us*/
+.aboutus{
+	background: url(../img/aboutus/about-bg.png) center no-repeat;
+	p{
+		font-size: 14px;
+	}
+	&-slick{
+		margin-top: 100px;
+		margin-bottom: 100px;
+		
+		&-block{
+			text-align:center;
+			h3{
+				font-size: 14px;
+			}
+			p{
+				font-size: 13px;
+			}
+		}
+
+	}
+}
 @media(max-width: 764px) {
 	.header{
 	
@@ -75,5 +148,4 @@ body{
 	
 	}
 }
-
 }
