--- a/theyalow/css/style.css
+++ b/theyalow/css/style.css
@@ -51,15 +51,32 @@ body {
 }
 .header-nav {
   display: inline-block;
-  padding-left: 20px;
+  position: relative;
+  margin-left: 20px;
   vertical-align: middle;
   line-height: 10px;
-  -webkit-transition: 1s;
-  transition: 1s;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+.header-nav:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: white;
+  position: absolute;
+  top: 150%;
+  left: 0;
+  -webkit-transition: all .2s;
+  transition: all .2s;
 }
 .header-nav:hover {
   cursor: pointer;
   color: #808080;
+}
+.header-nav:hover:after {
+  top: 200%;
+  background-color: #808080;
 }
 .header-nav p {
   display: inline-block;
@@ -89,11 +106,16 @@ body {
   background: none;
   color: white;
   font-size: 16px;
-  padding: 20px 50px;
+  padding: 10px 25px;
   border: 2px solid white;
   border-radius: 2px;
-  -webkit-transition: 3s;
-  transition: 3s;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+.header-btn:hover {
+  padding: 20px 50px;
+  color: #808080;
+  border-color: #808080;
 }
 /*Services*/
 .services {
@@ -122,11 +144,83 @@ body {
 .aboutus-slick-block {
   text-align: center;
 }
+.aboutus-slick-block img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 .aboutus-slick-block h3 {
+  padding-top: 20px;
   font-size: 14px;
 }
 .aboutus-slick-block p {
   font-size: 13px;
+}
+.work__nav {
+  margin-top: 30px;
+  text-align: center;
+}
+.work__nav ul {
+  list-style-type: none;
+}
+.work__nav li {
+  display: inline-block;
+  margin-left: 24px;
+}
+.work__nav__btn {
+  border: none;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
+}
+.work__nav__btn:hover {
+  color: red;
+}
+.work__nav__btn:active {
+  border: none;
+  color: red;
+}
+.work__nav__btn:focus {
+  border: none;
+  color: red;
+}
+.work__block {
+  margin-top: 70px;
+}
+.work__block__item {
+  margin-bottom: 30px;
+}
+.work__paralax {
+  height: 369px;
+  background: url(../img/work/work-back.jpg) center no-repeat;
+  margin-top: 100px;
+}
+.work__paralax_red {
+  background-color: rgba(192, 48, 28, 0.5);
+  height: 100%;
+  text-align: center;
+}
+.work__paralax_red p {
+  padding-top: 100px;
+  color: white;
+  font-size: 30px;
+}
+.work__paralax_red button {
+  margin-top: 50px;
+  color: white;
+  background: none;
+  border: none;
+  font-size: 18px;
+  text-transform: uppercase;
+  padding: 10px 19px;
+  border: 2px solid white;
+  border-radius: 2px;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+.work__paralax_red button:hover {
+  padding: 20px 50px;
+  color: #808080;
+  border-color: #808080;
 }
 @media (max-width: 764px) {
   .header-logo {
@@ -134,5 +228,22 @@ body {
   }
   .header-btn {
     margin-top: 60px;
+  }
+  .work__nav li {
+    margin-left: 20px;
+  }
+}
+@media (max-width: 450px) {
+  .slick-slide img {
+    display: inline-block;
+  }
+  .work__nav li {
+    margin-left: 0px;
+  }
+  .work__nav__btn {
+    margin-left: 0px;
+  }
+  .work__paralax_red p {
+    font-size: 25px;
   }
 }
