--- a/theyalow/css/Style.css
+++ b/theyalow/css/Style.css
@@ -10,6 +10,9 @@ a {
   a:hover {
     text-decoration: none; }
 
+button:focus {
+  outline: none; }
+
 .section-header {
   text-align: center; }
   .section-header h2 {
@@ -268,9 +271,120 @@ a {
     font-size: 20px;
     font-weight: 400; }
 
+.touch-block::before {
+  content: "";
+  position: absolute;
+  left: -10px; }
+.touch-block h3 {
+  margin-bottom: 20px;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase; }
+.touch-block p {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 20px;
+  padding-top: 0px;
+  padding: 0px 0px;
+  margin: 0px 0px; }
+.touch-block_1::before {
+  width: 12px;
+  height: 18px;
+  background: url(../img/touch/marker1.png) center no-repeat; }
+.touch-block_2 h3 {
+  margin-top: 40px; }
+.touch-block_2::before {
+  width: 12px;
+  height: 18px;
+  background: url(../img/touch/marker2.png) center no-repeat; }
+.touch-block_3 h3 {
+  margin-top: 40px; }
+.touch-block_3::before {
+  margin-top: 3px;
+  width: 17px;
+  height: 17px;
+  background: url(../img/touch/marker3.png) center no-repeat; }
+.touch input {
+  display: inline-block;
+  color: black;
+  width: 330px;
+  text-transform: uppercase;
+  margin-left: 30px;
+  margin-bottom: 25px;
+  font-size: 12px;
+  padding: 12px 15px;
+  border: 1px solid black; }
+  .touch input:focus {
+    outline: none;
+    border-color: red; }
+.touch textarea {
+  width: 95%;
+  color: black;
+  text-transform: uppercase;
+  margin-left: 30px;
+  margin-bottom: 25px;
+  font-size: 12px;
+  padding: 12px 15px;
+  border: 1px solid black; }
+  .touch textarea:focus {
+    outline: none;
+    border-color: red; }
+.touch-btn {
+  display: inline-block;
+  margin-left: 30px;
+  margin-bottom: 100px;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 0.6px;
+  padding: 15px 35px;
+  border: 1px solid black;
+  -webkit-transition: all .2s;
+  transition: all .2s; }
+  .touch-btn:hover {
+    background-color: #c0301c;
+    color: white; }
+.touch-input p {
+  display: inline-block;
+  margin-left: 40px;
+  font-size: 12px;
+  font-family: serif;
+  font-weight: 400;
+  line-height: 20px; }
+
+footer {
+  position: relative;
+  height: 307px;
+  background: url(../img/touch/footer-back.png) center no-repeat;
+  text-align: center; }
+  footer img {
+    margin-top: 100px;
+    padding: 5px;
+    border-radius: 50%;
+    border: 1.5px solid white; }
+  footer p {
+    margin-top: 80px;
+    color: white;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    text-transform: uppercase; }
+  footer .shape {
+    position: absolute;
+    margin-top: 0px;
+    border: none;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%); }
+
 @media (max-width: 1200px) {
   .post__block img {
-    width: 380px; } }
+    width: 380px; }
+
+  .touch input {
+    width: 270px; } }
 @media (max-width: 1000px) {
   .post__block {
     text-align: center; }
@@ -284,7 +398,16 @@ a {
         padding: 10px 0px;
         padding-left: 0px; }
       .post__block-item-header-item h3 {
-        width: 100%; } }
+        width: 100%; }
+
+  .touch {
+    margin-top: 150px; }
+
+  .touch input {
+    width: 220px; }
+
+  .touch-input p {
+    margin-left: 10px; } }
 @media (max-width: 764px) {
   .header-logo {
     margin-bottom: 50px; }
@@ -292,7 +415,17 @@ a {
     margin-top: 60px; }
 
   .work__nav li {
-    margin-left: 20px; } }
+    margin-left: 20px; }
+
+  .touch {
+    text-align: center; }
+    .touch-block {
+      margin-bottom: 20px; }
+
+  .touch-block::before {
+    content: "";
+    position: absolute;
+    left: 200px; } }
 @media (max-width: 450px) {
   .slick-slide img {
     display: inline-block; }
@@ -311,6 +444,21 @@ a {
     margin-left: 0px; }
 
   .post__block img {
-    width: 320px; } }
+    width: 320px; }
 
-/*# sourceMappingURL=StyleSass.css.map */
+  .touch-block::before {
+    content: "";
+    position: absolute;
+    left: 100px; }
+
+  .touch input {
+    margin-left: 0px; }
+
+  .touch textarea {
+    margin-left: 0px;
+    width: 220px; }
+
+  .touch-btn {
+    margin-left: 0px; } }
+
+/*# sourceMappingURL=Style.css.map */
