--- a/Web5/sass/Style.scss
+++ b/Web5/sass/Style.scss
@@ -152,5 +152,6 @@ button {
     .header__bottom button {
         margin-bottom: 150px;
     }
-
+    .header__bottom {
+        margin-top: 100px; }
 }
